feat: Pre-install validator into container
Installing the validator and discovering the available tests takes
significant time on first startup. By including it in the container, we
improve the user experience on first startup and the latency until the
container becomes available (e.g. for autoscaling in a cluster
environment).